<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedUserGit">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_real_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/real_name" />

    <TextView
        android:id="@+id/tv_item_user_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_location"
        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

    <TextView
        android:id="@+id/tv_item_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_real_name"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_item_user_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_repository"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_user_company" />

    <TextView
        android:id="@+id/tv_item_user_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:drawableStartCompat="@drawable/ic_baseline_location_city_24"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
        tools:text="@string/company_name" />

    <TextView
        android:id="@+id/tv_item_user_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_following"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_user_repository" />

    <TextView
        android:id="@+id/tv_item_user_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_follower"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_user_following" />

</androidx.constraintlayout.widget.ConstraintLayout>